kubernetes/apps/base/simple-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  selector:
    matchLabels:
      app: app
  replicas: 1
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container
        image: example/image:tag
        ports:
        - containerPort: 3000 # todo: make this configurable
