kubernetes/apps/base/simple-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
  - port: 80
    targetPort: 3000 # todo: make this configurable
  selector:
    app: app
