kubernetes/apps/base/simple-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "certificate-issuer"
spec:
  tls:
  - hosts:
    - some.example.domain
    secretName: tls
  rules:
  - host: placeholder.local # will automatically be replaced with tls.host from above
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service
            port:
              number: 80
